Spawn entity with Raws